<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="ir.chatbot.ui.chatroom.createChatRoomDialog.CreateChatRoomViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="4dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="65dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="30dp">


                <TextView
                        android:textSize="20sp"
                        android:text="@string/titleCreateChatRoom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/gray"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etChatRoomName"
                            style="@style/TextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/input_border_bottom"
                            android:cursorVisible="true"
                            android:gravity="center|start|bottom"
                            android:hint="@string/chatRoomName"
                            android:inputType="text"
                            android:maxLength="50"
                            android:paddingBottom="10dp"
                            android:textColor="@color/black_effective"
                            android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>



            </LinearLayout>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="20dp">

                <Button
                        android:id="@+id/btnLater"
                        style="@style/Button.Action.Negative"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:onClick="@{() -> viewModel.onLaterClick()}"
                        android:text="@string/cancel" />

                <Button
                        android:id="@+id/btnSubmit"
                        style="@style/Button.Action.Positive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:onClick="@{() -> viewModel.onSubmitClick()}"
                        android:text="@string/submit" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</layout>